--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "lerna": "^2.11.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.12.1"
+  },
+  "dependencies": {
+    "reductress-core": "^0.1.2"
   }
 }
